Corrected alignment of the side nav icon.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -403,7 +403,7 @@ div#clockINOUT, div#issueLog, div#notification, div#project-jump{
 
 .toggle-icon{
   position: fixed;
-  top: 90px;
+  top: 140px;
   left: 225px;
   width: 25px;
   height: 25px;
